# ModPlugPlayer

./: .gitignore  .gitmodules  Borders.txt  CMakeLists.txt  Commodore_Amiga__and__Amiga_Inc.eps  Enums.hpp  LCDPanel.cpp  LCDPanel.ui  MPP.icns  MPP.rc  MacManager.h  MacManager.mm  MathUtil.hpp  ModPlugPlayer.pro  ModPlugPlayer_en_US.ts  ModulePlayer.cpp  ModulePlayer.hpp  ModulePlayerThread.hpp  MppParameters.cpp  OptionButtons.hpp  OptionButtons.ui  PlayerControlButtons.hpp  PlayerWindow.cpp  PlayerWindow.hpp  PlayerWindow.ui  README.md  SetupWindow.cpp  SetupWindow.hpp  SetupWindow.ui  SineGenerator.cpp  SineGenerator.hpp  TitleBar.hpp  TitleBar.ui  hidetitlebar.h  iconset.txt  main.cpp
.github/workflows/: BuildOnMacOS.yml  BuildOnMinGW.yml  CreateRelease.yml  cmake.yml
CMakeModules/: FindKissFFT.cmake  FindOpenMPT.cmake  FindPortAudio.cmake  FindPortAudioCPP.cmake
DeploymentScripts/: DeployOnMSYS2.cpp  macdeployqtfix.py
Documents/: HowToBuildModPlugPlayerOnLinux.txt  HowToBuildModPlugPlayerOnMac.txt  HowToBuildModPlugPlayerOnWindows.txt  QtCreatorSettings.txt  macOSTahoeIconLinks.txt
Installers/DMG/: CreateDMG.bash  CreateDMG.txt  MPP Disk Icon.icns  MPP Disk Icon.xcf  MPP Installer Background.xcf
Installers/InnoSetup/: ModPlugPlayerInstaller.iss  SignToolSettings.txt
Installers/InnoSetup/Icons/: CDICon.txt  CreateIcon.sh  Installer_Icon_512x512.xcf
MPP Resources/: ModPlugPlayer.qrc  VersionInfo.json
MPP Resources/Cursor/0409/: 11.cur  12.cur
MPP.iconset/: MPPSystemIcon.xcf  icon_512x512.xcf
Original Icons/: MPP.icns
Signing/: CodeSignForMacOS.sh  SetSigningVariables.sh  SignByCertum.bat
src/: AboutWindow.cpp  AboutWindow.hpp  AppEventFilter.cpp  AppEventFilter.hpp  BeeperWIthCallback.cpp  BeeperWIthCallback.hpp  ColorChooser.cpp  ColorChooser.hpp  Enums.hpp  EventFilters.cpp  EventFilters.hpp  LCDPanel.cpp  LCDPanel.hpp  LedButton.cpp  LedButton.hpp  MPPLogoGraphicsView.cpp  MPPLogoGraphicsView.hpp  MacManager.h  MacManager.mm  ModuleClasses.cpp  ModuleClasses.hpp  ModuleFileMetadataReader.cpp  ModuleFileMetadataReader.hpp  ModuleHandler.cpp  ModuleHandler.hpp  ModulePlayer.cpp  ModulePlayer.hpp  ModulePlayerThread.cpp  ModulePlayerThread.hpp  MppParameters.cpp  MppParameters.hpp  OptionButton.cpp  OptionButton.hpp  OptionButtons.cpp  OptionButtons.hpp  PlayListEditor.cpp  PlayListEditor.hpp  PlayListEditorWindow.cpp  PlayListEditorWindow.hpp  PlayerButton.cpp  (+40 more)
src/Implementation/: FFTWImpl.cpp  FFTWImpl.hpp  KissFFTImpl.cpp  KissFFTImpl.hpp
src/Implementation/FFT/: FFTWImpl.cpp  FFTWImpl.hpp  KissFFTImpl.hpp
src/Implementation/PlayListFileHandler/: ExtendedM3UFileFormatHandler.cpp  ExtendedM3UFileFormatHandler.hpp  MolFileFormatHandler.cpp  MolFileFormatHandler.hpp  XSPFFileFormatHandler.cpp  XSPFFileFormatHandler.hpp
src/OsSpecific/macOS/: MacManager.mm
src/Util/: FFTUtil.cpp  FFTUtil.hpp  ModPlugPlayerUtil.cpp  ModPlugPlayerUtil.hpp  WindowUtil.cpp  WindowUtil.hpp
ui/: AboutWindow.ui  LCDPanel.ui  OptionButtons.ui  PlayListEditor.ui  PlayListEditorWindow.ui  PlayerControlButtons.ui  PlayerWindow.ui  Resources.qrc  SetupWindow.ui  SystemCaptionButtons.ui  TitleBar.ui  VersionInfoWindow.ui
ui/Icons/: MPP.icns
